# my-harness

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BRANCH_ARCHIVED.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TECHNICAL-GOVERNANCE-ANALYSIS.md  install.sh  litho.toml  opencode.jsonc  pyproject.toml
spec-kit-multi-agent-tdd/: S2B-004-COMPLETION-REPORT.md  USER-GUIDE.md  config-schema.json  extension.json  harness-tdd-config.yml.template  pyproject.toml  requirements.txt
spec-kit-multi-agent-tdd/.specify/: hooks.yml  hooks.yml.example
spec-kit-multi-agent-tdd/commands/: MIGRATION.md  commit.md  discover.md  execute.md  execute.py  implement.md  implement.py  review.md  solution-design.md  specify-adr.md  specify-product-brief.md  specify-solution-design.md  specify-test-strategy.md  test.md  test.py  test.py.bak  update-docs.md
spec-kit-multi-agent-tdd/config/: test-patterns.yml
spec-kit-multi-agent-tdd/docs/: AUTOMATION.md
spec-kit-multi-agent-tdd/examples/: workflow_integration.sh
spec-kit-multi-agent-tdd/hooks/: config.yml  install.sh
spec-kit-multi-agent-tdd/lib/: README_ARTIFACT_VALIDATOR.md  README_TEST_EVIDENCE_PARSER.md  artifact_paths.py  evidence_validator.py  generate_artifact.py  human_feedback.py  jira_local.py  parse_test_evidence.py  test_runner.py  validate_artifacts.py  validate_manifests.py
spec-kit-multi-agent-tdd/scripts/: __init__.py  detect_review_convergence.py  escalate_broken_tests.py  extract_acceptance_criteria.py  parse_pytest_output.py  run_integration_checks.py  validate_artifact_structure.py  validate_feature_artifacts.py  validate_green_state.py  validate_red_state.py
spec-kit-multi-agent-tdd/templates/: adr-template.md  arch-review-template.md  code-review-template.md  implementation-notes-template.md  prd-template.md  solution-design-template.md  spec-template.md  system-constitution-template.md  test-design-template.md  workflow-summary-template.md
spec-kit-multi-agent-tdd/tests/: test_command_commit.py  test_command_execute.py  test_command_implement.py  test_command_review.py  test_command_test.py  test_generate_artifact.py  test_test_runner.py  (+4 more)
(+403 files in other folders)
