[project]
name = "..."
version = "..."
description = "..."
requires-python = ">=3.13"

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["..."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# Test markers for running specific test groups
# Usage: pytest -m <marker> to run only tests with that marker
#        pytest -m "not <marker>" to exclude tests with that marker
markers = []