[project]
name = "spec-kit-multi-agent-tdd"
version = "0.1.0"
description = "Multi-Agent TDD Workflow Spec Kit"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
